[project]
name = "auto_context"
version = "0.1.0"
description = "ACreate prompts from a user query and knowledge source of corpus of text"
authors = [{ name = "Mark Watson", email = "markw@markwatson.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "numpy>=2.3.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
]

[tool.setuptools]
py-modules = ["auto_context"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
